--- a/package.json
+++ b/package.json
@@ -1,1 +1,21 @@
-
+{
+  "name": "legal-chatbot-backend",
+  "version": "1.0.0",
+  "description": "Backend för juridisk chatbot",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "generate-embeddings": "node scripts/generate-embeddings.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "openai": "^4.20.0",
+    "express-rate-limit": "^7.1.5"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
+  }
+}
